refactor(yaci): bracket scalus-testkit's YaciContainer instead of rolling our own
Replaces the hand-rolled testcontainers-scala GenericContainer wiring in
`YaciDevnet.resource` with `scalus.testing.yaci.YaciContainer.acquire/release`
(a thin wrapper over Bloxbean's `YaciCardanoContainer`). Drops the
`testcontainers-scala-core` dep entirely since scalus-testkit brings the
testcontainers-java transitive.

Two knock-on adjustments in `build.sbt`:

- Force `testcontainers-java` to 1.21.3 as a direct dep. Bloxbean's
  `yaci-cardano-test:0.1.0` transitively pins 1.17.6 (docker-java 3.2.13),
  which modern rootless dockerd (MinAPIVersion 1.40) refuses to speak to.
- Fork the integration Test JVM and set `-Dapi.version=1.44`. Without this,
  testcontainers 1.21.3's `DockerClientProviderStrategy.getClientForConfig`
  forces the shaded docker-java `apiVersion` to `VERSION_1_32` whenever it
  resolves to `UNKNOWN_VERSION` — a compat fallback for pre-1.24 daemons that
  contemporary daemons reject.

TODO on `Stage1PropertiesYaci` in `Runner.scala` to migrate off the manually-
started devkit prerequisite onto the same `YaciDevnet.resource` bracket, so
the two Yaci-touching suite families share one Testcontainers-managed devnet.